# DioxusBrain

./: Cargo.toml  README.md  index.html  tailwind.config.js
src/: app.rsx  lib.rs  main.rs
src/components/: backlinks.rsx  block.rsx  command_palette.rsx  editor.rsx  graph.rsx  mod.rs  sidebar.rsx
src/graph/: mod.rs
src/storage/: mod.rs
src/store/: mod.rs
src/utils/: mod.rs
