[package]
name = "dioxus-brain"
version = "0.1.0"
edition = "2021"
description = "A knowledge management tool inspired by Logseq and Obsidian"
authors = ["DioxusBrain Team"]

[dependencies]
# Dioxus 0.7 - Modern Rust-based UI framework
dioxus = "0.7"
dioxus-core = "0.7"
dioxus-hooks = "0.7"
dioxus-router = "0.7"
dioxus-html = "0.7"

# Web interop for browser APIs
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Event",
    "KeyboardEvent",
    "Storage",
    "FileReader",
    "Blob",
    "HtmlInputElement",
    "Text",
] }

# Storage
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4", "js"] }

# Regex for parsing
regex = "1.5"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# Debug utilities
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[features]
default = ["web"]
web = []
desktop = ["dioxus/desktop"]

[package.metadata.dioxus]
default_platform = "web"
